--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+	<link rel="icon" type="image/svg+xml" href="/consumo-api-rick-and-morty/assets/favicon.17e50649.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>RAM App</title>
-  <script type="module" crossorigin src="/assets/index.6dc4dfe4.js"></script>
-  <link rel="stylesheet" href="/assets/index.74ae93ab.css">
+  <script type="module" crossorigin src="/consumo-api-rick-and-morty/assets/index.6dc4dfe4.js"></script>
+  <link rel="stylesheet" href="/consumo-api-rick-and-morty/assets/index.74ae93ab.css">
 </head>
 
 <body>
